Fix the vertical alignment of the `.navbar` image

--- a/src/ui/components/_navbar.scss
+++ b/src/ui/components/_navbar.scss
@@ -14,6 +14,11 @@
 	}
 }
 
+.navbar-brand img {
+	position: relative;
+	top: -1px;
+}
+
 .navbar-nav .nav-link {
 	.icon { transform: scale(1.2); }
 	&.active .icon { font-variation-settings: "FILL" 1; }
